--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="NSHCS-TMS prototype" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="robots" content="noindex">
-        <link rel="stylesheet" type="text/css" href="assets/dist/css/main.css">
+        <link rel="stylesheet" type="text/css" href="./assets/dist/css/main.css">
     </head>
 
     <body>
@@ -14,7 +14,7 @@
         <main id="main-content">
             Hello world
         </main>
-        <script src="assets/dist/js/main.js"></script>
+        <script src="./assets/dist/js/main.js"></script>
     </body>
 </html>
 
