Hook up POC localstorage

--- a/edit.html
+++ b/edit.html
@@ -15,30 +15,30 @@
             <div class="wrapper wrapper--default">
                 <form class="form" id="form-populate">
                     <fieldset class="form__fieldset">
-                        <legend class="form__legend">Personal details</legend>
+                        <legend class="form__legend">Personal details (edit view)</legend>
 
                         <label class="form__label" for="name">Name</label>
-                        <input class="form__input" type="text" id="name" name="name" data-form="name"/>
+                        <input class="form__input form__input--edit-view" type="text" id="name" name="name" data-form="name"/>
 
                         <label class="form__label" for="dob">Date of birth</label>
-                        <input class="form__input form__input--dob" type="text" id="dob-1" name="dob" data-form="dob-1"/>
-                        <input class="form__input form__input--dob" type="text" id="dob-2" name="dob" data-form="dob-2"/>
-                        <input class="form__input form__input--dob-wide" type="text" id="dob-3" name="dob" data-form="dob-3"/>
+                        <input class="form__input form__input--edit-view form__input--dob" type="text" id="dob-1" name="dob" data-form="dob-1"/>
+                        <input class="form__input form__input--edit-view form__input--dob" type="text" id="dob-2" name="dob" data-form="dob-2"/>
+                        <input class="form__input form__input--edit-view form__input--dob-wide" type="text" id="dob-3" name="dob" data-form="dob-3"/>
 
                         <label class="form__label" for="address_1">Home address</label>
-                        <input class="form__input" type="text" id="address_1" name="address_1" data-form="address-1"/>
+                        <input class="form__input form__input--edit-view" type="text" id="address_1" name="address_1" data-form="address-1"/>
 
                         <label class="form__label sr-only" for="address_2">Address 2</label>
-                        <input class="form__input" type="text" id="address_2" name="address_2" data-form="address-2"/>
+                        <input class="form__input form__input--edit-view" type="text" id="address_2" name="address_2" data-form="address-2"/>
 
                         <label class="form__label sr-only" for="address_3">Address 3</label>
-                        <input class="form__input" type="text" id="address_3" name="address_3" data-form="address-3"/>
+                        <input class="form__input form__input--edit-view" type="text" id="address_3" name="address_3" data-form="address-3"/>
 
                         <label class="form__label sr-only" for="address_4">Address 4</label>
-                        <input class="form__input" type="text" id="address_4" name="address_4" data-form="address-4"/>
+                        <input class="form__input form__input--edit-view" type="text" id="address_4" name="address_4" data-form="address-4"/>
 
                         <label class="form__label" for="select-menu">Some select menu</label>
-                        <select class="form__input" type="text" id="select-menu" name="select-menu" data-form="select-menu">
+                        <select class="form__input form__input--edit-view" type="text" id="select-menu" name="select-menu" data-form="select-menu">
                             <option>Option one</option>
                             <option>Option two</option>
                             <option>Option three</option>
@@ -46,8 +46,8 @@
                     </fieldset>
                 </form>
 
-                <button id="save">Save and proceed</button>
                 <button id="clear">Clear data</button>
+                <button id="edit">Return to index</button>
 
             </div>
         </main>
