--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
         <main id="main-content">
             <div class="wrapper wrapper--default">
 
-                <h1 class="heading heading--two" data-name-heading="name"></h1>
+                <div class="intro">
+                    <div>
+                        <div class="intro__heading-container">
+                            <h1 class="intro__heading heading heading--two" data-name-heading="name">[First Second]</h1>
+                            <div class="tag tag--green">Active - FT</div>
+                            <div class="tag tag--red">Parental leave - FT</div>
+                        </div>
+                        <p class="intro__subheading">
+                            NSHCS registration number: 124047
+                        </p>
+                    </div>
+                    <div>
+                        <button class="intro__button button button--green" data-save>Save changes</button>
+                        <button class="intro__button button button--cancel" data-cancel>Cancel</button>
+                    </div>
+                </div>
 
                 <form class="form" id="form-populate">
 
@@ -121,8 +136,9 @@
                         <legend class="form__legend">Personal details</legend>
                         <div class="form__item">
                             <label class="form__label" for="name">Name</label>
-                            <input class="form__input" type="text" id="name" name="name" data-form="name" autocomplete="given-name"/>
+                            <input class="form__input" type="text" id="name" name="name" data-form="name" autocomplete="given-name" value="[First Second]"/>
                         </div>
+
                         <div class="form__item">
                             <p class="form__label" for="dob">Date of birth</p>
                             <div>
@@ -153,17 +169,7 @@
                             <label class="form__label sr-only" for="address-4">Address 4</label>
                             <input class="form__input" type="text" id="address-4" name="address-4" data-form="address-4"/>
                         </div>
-                        <div class="form__item">
-                            <label class="form__label" for="select-menu">Some select menu</label>
-                            <div class="custom-select">
-                                <select id="select-menu" name="select-menu" class="custom-select__item" data-form="select-menu">
-                                    <option value="">------</option>
-                                    <option value="Option one">Option one</option>
-                                    <option value="Option two">Option two</option>
-                                    <option value="Option three">Option three</option>
-                                </select>
-                            </div>
-                        </div>
+
                         <div class="form__item">
                             <label class="form__label" for="work-telephone">Work telephone</label>
                             <input class="form__input" type="text" id="work-telephone" name="work-telephone" data-form="work-telephone"/>
