Fix address in view mode

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                             <div class="custom-select">
                                 <select id="training-trust" name="training-trust" class="custom-select__item" data-form="training-trust">
                                     <option value="">------</option>
-                                    <option value="Option one">Sheffield Training Hospitals Trust</option>
+                                    <option value="Sheffield Training Hospitals Trust">Sheffield Training Hospitals Trust</option>
                                     <option value="Option two">Option two</option>
                                     <option value="Option three">Option three</option>
                                 </select>
@@ -404,7 +404,7 @@
                             <div class="custom-select">
                                 <select id="training-hospital-site" name="training-hospital-site" class="custom-select__item" data-form="training-hospital-site">
                                     <option value="">------</option>
-                                    <option value="Option one">Sheffield Hallam Hospital</option>
+                                    <option value="Sheffield Hallam Hospital">Sheffield Hallam Hospital</option>
                                     <option value="Option two">Option two</option>
                                     <option value="Option three">Option three</option>
                                 </select>
@@ -446,7 +446,7 @@
                             <div class="custom-select">
                                 <select id="qualification-type" name="qualification-type" class="custom-select__item" data-form="qualification-type">
                                     <option value="">------</option>
-                                    <option value="Option one">Undergraduate</option>
+                                    <option value="Undergraduate">Undergraduate</option>
                                     <option value="Option two">Option two</option>
                                     <option value="Option three">Option three</option>
                                 </select>
@@ -458,7 +458,7 @@
                             <div class="custom-select">
                                 <select id="institution" name="institution" class="custom-select__item" data-form="institution">
                                     <option value="">------</option>
-                                    <option value="Option one">Nottingham Trent Universtiy</option>
+                                    <option value="Nottingham Trent University">Nottingham Trent University</option>
                                     <option value="Option two">Option two</option>
                                     <option value="Option three">Option three</option>
                                 </select>
@@ -475,10 +475,10 @@
                             <div class="custom-select">
                                 <select id="mark" name="mark" class="custom-select__item" data-form="mark">
                                     <option value="">------</option>
-                                    <option value="Option one">1st</option>
-                                    <option value="Option two">2:1</option>
-                                    <option value="Option three">2:2</option>
-                                    <option value="Option three">3rd</option>
+                                    <option value="1st">1st</option>
+                                    <option value="2:1">2:1</option>
+                                    <option value="2:2">2:2</option>
+                                    <option value="3rd">3rd</option>
                                 </select>
                             </div>
                         </div>
